adds cancel btn to forms + more stat structure

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -43,4 +43,5 @@
       <%= f.submit "Save", :class => "btn-sm btn-primary"%>
     </div>
   <% end %>
+    <%= link_to "Cancel", :back, {:class=>"btn-sm btn-default btn-cancel"} %>
 </div>
