--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -104,6 +104,11 @@ h6 {
   vertical-align: middle;
 }
 
+.h2-black-clean {
+  color: #000;
+  font-size: 2em;
+}
+
 .h3-white {
   color: #fff;
   font-size: 1.5em;
@@ -373,7 +378,10 @@ body {
   margin-bottom: 20px;
   text-align: center;
 }
-
+.btn-cancel{
+  float:right;
+  margin-top: -30px;
+}
 .field {
   margin: 15px;
 }
