--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -20,4 +20,5 @@
       <%= f.submit "Save", :class => "btn-sm btn-primary"%>
     </div>
   <% end %>
+    <%= link_to "Cancel", :back, {:class=>"btn-sm btn-default btn-cancel"} %>
 </div>
