--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -10,7 +10,7 @@
           <div class="col-sm-3">
             <div class="stat-title"><%= @current_year %></div>
 
-              Total Attendance <span class="stat pull-right"><%= @spectactors_year %></span><br>
+              <span class="h2-black-clean">Total<span class=" pull-right"><%= @spectactors_year %></span></span><br>
               Sunday Average <span class="stat"><%= @sunday_average %></span><br>
               Wednesday Average <span class="stat"><%= @wednesday_average %></span><br>
               Kids Average <span class="stat"><%= @kids_average %></span><br>
@@ -37,23 +37,27 @@
           <span class="stat-title">Last Week - <%= @startlastweek %>-<%= @endlastweek %></span><br>
         </div>
 
+  <div class="white-box col-sm-1">
+        <div class="stat-title">General Stats</div>
+        Total Users <%= @users.count %><br><br>
 
-        <div class="h3-white">Users</div>
-        <p>Total Users<%= @users.count %></p>
-        <div class="h3-white">Families</div>
-        <p>Total:<%= @units.count %></p>
-        <p>Week: <%= @units7 %></p>
-        <p>Month: <%= @units30 %></p>
-        <p>Year: <%= @units365 %></p>
-        <div class="h3-white">People</div>
-        <p>Total:<%= @parts.count %></p>
-        <p>Week: <%= @parts7 %></p>
-        <p>Month: <%= @parts30 %></p>
-        <p>Year: <%= @parts365 %></p>
+        Total Families: <%= @units.count %><br>
+        Week: <%= @units7 %>
+        Month: <%= @units30 %>
+        Year: <%= @units365 %><br><br>
 
-        <div class="h3-white">Families</div>
+        Total People: <%= @parts.count %> <br>
+        Week: <%= @parts7 %>
+        Month: <%= @parts30 %>
+        Year: <%= @parts365 %>
+
+</div><br>
+
+        <div class="h3-white">Extra Sample Ideas Families</div>
+
+        <div class="h3-white">Users by day</div>
         <%= line_chart Unit.group_by_day(:created_at).count %>
-        <div class="h3-white">People</div>
+        <div class="h3-white">People by day</div>
         <%= line_chart Part.group_by_day(:created_at).count %>
         <div class="h3-white">People by week</div>
         <%= pie_chart Part.group_by_week(:created_at).count %>
