--- a/app/views/revents/show.html.erb
+++ b/app/views/revents/show.html.erb
@@ -1,19 +1,65 @@
-<p id="notice"><%= notice %></p>
+<div class="flex-container-big">
+  <div class="flex-block-big">
+    <div class="row">
+      <div class="col-sm-5">
+        <div class="h2-white">Event - Show</div>
+        <br><%= link_to 'Back', revents_path %>
+        <br>
 
-<p>
-  <strong>Name:</strong>
-  <%= @revent.name %>
-</p>
+        <h3><%= @revent.name %></h3>
+        <p><%#= @revent.date%></p><!-- .strftime("%A, %b %d, %Y")  Tuesday, Jan 28, 2015 -->
+        <span class="h5-grey">Starting</span>
+        <p><%= @revent.start_time.strftime("%I:%M %p") %></p><br><!--.strftime("%I:%M %p") -->
+        <span class="h5-grey">Location</span>
+        <p><%#= @revent.locationname %></p>
+        <span class="h5-grey">Address</span>
+        <p><%#= @revent.street %><br>
+          <%#= @revent.city %><%#= @revent.state %>
+          <%#= @revent.zip %></p>
+        <span class="h5-grey">Recurring</span>
+        <p><%= @revent.recurring %></p>
+        <span class="h5-grey">Description</span>
+        <p><%#= @event.description %></p>
+        <br>
+        <%#= link_to "Delete Event", event_path(@event), :class => "btn btn-sm btn-danger pull-right",:data => {:confirm => "Are you sure?",:method => "delete"}, remote: true  %>
+        <!-- Javascript form toggle -->
+        <div class="edit_family btn btn-sm btn-warning">Edit Event</div>
+        <div class="edit_f">
+          <%= render "form" %>
+        </div>
+        <%#= link_to 'Full Edit', edit_revent_path(@revent) %>
 
-<p>
-  <strong>Start time:</strong>
-  <%= @revent.start_time %>
-</p>
+      </div><!-- col end -->
+      <div class="col-sm-4">
 
-<p>
-  <strong>Recurring:</strong>
-  <%= @revent.recurring %>
-</p>
+        <!-- SHOWS only spectators in this Event -->
+        <div class="people-box">
+          <h4>Current Attendance  <%= @revent.spectators.count %></h4>
+          <br>
+          <% @spectators.each do |spectator| %>
+          <!-- Filters only this event -->
+          <% if spectator.revent.id === @revent.id %>
+    <!-- <div class="people-btn"> -->
+            <span class="grey-btn white">
+              <%= spectator.part.firstname %>
+              <%= spectator.part.lastname %>
 
-<%= link_to 'Edit', edit_revent_path(@revent) %> |
-<%= link_to 'Back', revents_path %>
+            <span class="X">
+              <%= link_to "X", spectator, :class => "black", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}%>
+            </span></span>
+    <!-- </div> -->
+          <% end %>
+          <% end %>
+          <!-- Filter end -->
+          <br>
+          <%= link_to 'Add Person', new_spectator_path, :class => "btn-sm btn-primary" %>
+        </div>
+
+
+
+
+
+    </div><!-- col end -->
+  </div><!--row end -->
+</div><!-- flex-block end -->
+</div><!-- flex-container end -->
