adding people to recurring events

--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -58,6 +58,7 @@
           <h4>People in this department</h4><br>
           <% @positions.each do |position| %>
           <!-- Filters only this department -->
+          <p><%= position.department.name %><p>
           <% if position.department.id === @department.id %>
           <div class="people-btn">
             <span class="grey-btn white">
