--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       <%= link_to image_tag("serve.png", :class => "nav-icon-size"), root_path %>
       <%= link_to image_tag("stats.png", :class => "nav-icon-size"), stats_path %>
       <%= link_to image_tag("checkin.png", :class => "nav-icon-size"), checkins_path %>
-      <%= link_to image_tag("event.png", :class => "nav-icon-size"), events_path %>
+      <%= link_to image_tag("event.png", :class => "nav-icon-size"), revents_path %>
       <%= link_to image_tag("departments.png", :class => "nav-icon-size"), departments_path %>
 
       </div>
@@ -32,7 +32,7 @@
         <li><%= link_to "Serve", root_path, :class => 'notWorking' %></li>
         <li><%= link_to "Stats", stats_path, :class => 'notWorking' %></li>
         <li class="NA"><%= link_to "Event Check-in", checkins_path, :class => 'notWorking' %></li>
-        <li class="<%= 'active_bg' if current_page?(events_path) %>"><%= link_to "Events", events_path, :class => 'notWorking' %></li>
+        <li class="<%= 'active_bg' if current_page?(revents_path) %>"><%= link_to "Events", revents_path, :class => 'notWorking' %></li>
         <li class="<%= 'active_bg' if current_page?(positions_path) || current_page?(departments_path) %>"><%= link_to "Departments", departments_path, :class => 'notWorking' %></li>
 
         <h5>Groups</h5>
