--- a/app/views/revents/_form.html.erb
+++ b/app/views/revents/_form.html.erb
@@ -21,6 +21,30 @@
     <%= f.datetime_select :start_time %>
   </div>
 
+  <hr>
+  <div class="field">
+  <%= f.text_field :locationname, :placeholder => 'Location Nickname', :class => 'form-control input-lg' %>
+  </div>
+  <div class="field">
+  <%= f.text_field :street, :placeholder => 'Street', :class => 'form-control input-lg' %>
+  </div>
+  <div class="field">
+  <%= f.text_field :city, :placeholder => 'City', :class => 'form-control input-lg' %>
+  </div>
+  <div class="field">
+  <%= f.text_field :state, :placeholder => 'State', :class => 'form-control input-lg' %>
+  </div>
+  <div class="field">
+  <%= f.text_field :zip, :placeholder => 'Zip', :class => 'form-control input-lg' %>
+  </div>
+  <div class="field">
+  <%= f.text_field :country, :placeholder => 'Country', :class => 'form-control input-lg' %>
+  </div>
+  <div class="field">
+  <%= f.text_area :description, :placeholder => 'Description', :class => 'form-control input-lg' %>
+</div> <hr>
+
+
   <div class="field">
     <%= f.label :recurring %>
     <%= f.select_recurring :recurring, nil, allow_blank: true %>   <!-- clear out and allow edit -->
