--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -16,8 +16,7 @@
               Kids Average <span class="stat"><%= @kids_average %></span><br>
               Serving Average <span class="stat pull-right"><%= @serving_average %></span><br><br>
 
-
-<%= @test %><br>
+            <%= @today %><br>
 
             </div>
             <div class="col-sm-9">
@@ -54,7 +53,7 @@
           <span class="h2-black-clean"><%= @lastweek%></span><br>
         </div>
 
-  <div class="white-box col-sm-1">
+      <div class="white-box col-sm-1">
         <div class="stat-title">General Stats</div>
         Total User Accounts: <%= @users.count %><br><br>
 
@@ -68,11 +67,11 @@
         Month: <%= @parts30 %>
         Year: <%= @parts365 %><br>
 
-      Full Month: <%= @specfullmonth.count %>
+        Full Month: <%= @specfullmonth.count %>
 
-</div><br>
+      </div><br>
 
-<div class="col-sm-12">
+      <div class="col-sm-12">
 
         <div class="h3-white">Extra Sample Ideas Families</div>
 
