--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -5,7 +5,8 @@
       <div class="col-sm-5">
 
         <div class="h2-white">Unit - Family - Show</div>
-        <br><br>
+        <br><%= link_to 'Back', units_path %>
+        <br>
 
         <h3><%= @unit.familyname %> Family
           <div class="pull-right">
