--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -1,9 +1,12 @@
+<!-- Not being used -->
 
+<!--
 <div class="flex-container-big">
   <div class="flex-block-big">
 
 
     <div class="h2-white pull-left">Part - Person - Show</div><br>
+    <%= link_to 'Back', parts_path %>
 
     <%= link_to "Delete Person", part_path(@part), :class => "btn-sm btn-danger pull-right",:data => {:confirm => "Are you sure?",:method => "delete"}, remote: true  %>
 
@@ -12,5 +15,5 @@
     <%= render "form" %>
 
 
-  </div><!-- flex-block end -->
-</div><!-- flex-container end -->
+  </div>
+</div> -->
