--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,7 +3,8 @@
     <div class="row">
       <div class="col-sm-5">
         <div class="h2-white">Event - Show</div>
-        <br><br>
+        <br><%= link_to 'Back', events_path %>
+        <br>
 
 
 
