--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,27 +7,44 @@
     <p>Momentum is a software that allows non profit organizations or social movements to organize their internal structure. The development has been broken into phases with the first one below.</p>
     <br>
     <div class="edit_family btn btn-sm btn-primary h2-white">User Stories for Phase 1</div>
-       <div class="edit_f">
+       <div class="edit_f"><br><br>
       <div class="h2-white pull-left">User Stories for Phase 1</div><br><br><br>
-        <p>As a admin you are able to create families and people that belong to those families.</p>
-        <p>As a admin you are able to create departments and assign people to those departments</p>
-        <p>As a admin you are able to create events and check people into those events</p>
-        <p>As a admin you are able to view statistics total users, families, people, and track attendance and movement growth over time.</p>
+        <p>Admin - store families and people that belong to those families</p>
+        <p>Admin - store departments and assign people to those departments</p>
+        <p>Admin - store events and check people into those events</p>
+        <p>Admin - view basic statistics total users, families, people, and track attendance and movement growth over time</p>
+        <p>User - create an account</p><br><br>
 
       <div class="h2-white pull-left">Still to do</div><br><br><br>
-        <p>Build out UI for dashboard and stats</p>
-        <p>As a admin you are able to create event needs</p>
-        <p>As a admin you are able to sign people to serve in those events to meet needs</p>
-        <p>As a user you are able to create an account. and view your dashboard</p>
-        <p>As a user you are able to see news, upcoming events, and serving opportunities on your dashboard</p>
-        <p>As a user you are able to sign up to serve in an event or department</p>
-        <p>As a admin you are able to approve and assign users serving in an event or department</p>
-        <p>As a user you will be able to give money or pay for group activities</p>
-        <p>As a user you will be able to become a leader and establish a group</p>
-        <p>As a leader you will be able to add people to your group and group details</p>
-        <p>As a leader you will be able to message your group members</p>
-        <p>As a user you will be able to email other people.</p>
-        <p>As a user you will be able to report a bug or development suggestion</p>
+        <br><p>------ General ------</p>
+        <p>Admin - View Stats - Needs Refining</p>
+        <p>Admin - View Dashboard with upcoming events</p>
+        <p>User - Report a bug or development suggestion</p>
+
+        <br><p>------ Serving ------</p>
+        <p>Admin - create event needs</p>
+        <p>Admin - assign people to serve in events to meet needs</p>
+
+        <br><p>------ Users ------</p>
+        <p>User - Update your account settings, picture and family details</p>
+        <p>User - View events user is signed up to serve in </p>
+        <p>User - View serving opportunities on the dashboard</p>
+        <p>User - Sign up to serve in an event or department</p>
+        <p>Admin - Approve users serving in an event or department</p>
+
+        <br><p>------ Giving ------</p>
+        <p>User - donate money or pay for group activities</p>
+
+        <br><p>------ Group ------</p>
+        <p>User - become a leader and establish a group</p>
+        <p>Leader - add people to your group and group details</p>
+        <p>Leader - message your group members</p>
+        <p>Leader - email other people</p>
+
+        <br><p>------ Email Marketing ------</p>
+        <p>Email Announcment or meeting to all users</p>
+
+        <p>Admin - post announcements/news to the dashboard</p>
 
     </div>
 
