improved form styling

--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="field center">
-      <%= f.submit "Save", :class => "btn-sm btn-primary"%>
+      <%= f.submit "Save", :class => "btn btn-primary"%>
     </div>
   <% end %>
     <%= link_to "Cancel", :back, {:class=>"btn-sm btn-default btn-cancel"} %>
