--- a/app/views/departments/new.html.erb
+++ b/app/views/departments/new.html.erb
@@ -1,3 +1,13 @@
-<div class="h2-white pull-left">New Department</div><br><br><br>
+<div class="row">
+  <div class="col-sm-12">
 
-<%= render "form" %>
+    <div class="form">
+      <div class="h2-white pull-left">New Department</div><br><br><br>
+      <%= link_to 'Back', departments_path %><br><br>
+      <%= render "form" %>
+    </div>
+
+  </div>
+  <!-- col end -->
+</div>
+<!--row end -->
