--- a/app/views/spectators/new.html.erb
+++ b/app/views/spectators/new.html.erb
@@ -1,3 +1,13 @@
-<h1>New Spectator</h1>
+<div class="row">
+  <div class="col-sm-12">
 
-<%= render 'form' %>
+    <div class="form">
+      <div class="h2-white pull-left">New Spectator</div><br><br><br>
+      <%= link_to 'Back', revents_path %><br><br>
+      <%= render 'form' %>
+    </div>
+
+  </div>
+  <!-- col end -->
+</div>
+<!--row end -->
